--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "covid-19",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jatin05m.github.io/covid19Tracker",
   "engines": {
-    "node": "14.8.0",
-    "npm": "6.14.7"
+    "node": "14.9.0",
+    "npm": "6.14.8"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
